test_suite/alan-2022-examples/passing/000011_random.alan
source w begin put ""; while 986 do put "[3\t" end end
