test_suite/alan-2022-examples/failing/007360_mutation.alan
source o begin put "\t0'a" to . "-c\t" end
